# Crewai-Agent

./: .env  README.md  exta.py  linkedin_post.md  main.py  pyproject.toml
skills/linkedin-writing/: skill.md
writer_agent/: .gitignore  README.md  pyproject.toml
writer_agent/src/writer_agent/: crew.py  main.py
