[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai]>=1.14.4",
    "crewai-tools>=1.14.4",
    "google-generativeai>=0.8.6",
    "litellm>=1.84.0",
    "python-dotenv>=1.2.2",
]
