[project]
name = "writer_agent"
version = "0.1.0"
description = "writer-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.14.4",
    "crewai[tools]==1.14.4",
]

[project.scripts]
writer_agent = "writer_agent.main:run"
run_crew = "writer_agent.main:run"
train = "writer_agent.main:train"
replay = "writer_agent.main:replay"
test = "writer_agent.main:test"
run_with_trigger = "writer_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
